--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "server": " npx json-server db.json --port 4000"
+    "server": " npx json-server db.json --port 4000"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -27,7 +27,9 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
     "shadcn": "^2.0.7",
+    "slick-carousel": "^1.8.1",
     "sooner": "^1.1.4",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
@@ -42,6 +44,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
