--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "install": "^0.13.0",
     "json-server": "^1.0.0-beta.2",
     "jsonserver": "^0.1.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.438.0",
     "radix": "^0.0.0",
     "react": "^18.3.1",
